syntax = "proto3";

package models.proto;

message Connection {
  enum Type {
    Invalid = 0;
    NONE    = 1;
    TCP     = 2;
    UDP     = 3;
  }
}

message UserStatus {
  enum Type {
    Invalid = 0;
    NONE    = 1;
    AWAY    = 2;
    BUSY    = 3;
  }
}

message MessageType {
  enum Type {
    Invalid = 0;
    NORMAL  = 1;
    ACTION  = 2;
  }
}

message FileControl {
  enum Type {
    Invalid = 0;
    RESUME  = 1;
    PAUSE   = 2;
    CANCEL  = 3;
  }
}



message SelfConnectionStatus {
  Connection.Type connection_status = 1;
}

message FriendName {
  uint32 friend_number        = 1;
  string name                 = 2;
}

message FriendStatusMessage {
  uint32 friend_number        = 1;
  string message              = 2;
}

message FriendStatus {
  uint32 friend_number        = 1;
  UserStatus.Type status      = 2;
}

message FriendConnectionStatus {
  uint32 friend_number        = 1;
  Connection.Type connection_status = 2;
}

message FriendTyping {
  uint32 friend_number        = 1;
  bool   is_typing            = 2;
}

message FriendReadReceipt {
  uint32 friend_number        = 1;
  uint32 message_id           = 2;
}

message FriendRequest {
  string public_key           = 1;
  uint32 time_delta           = 2;
  string message              = 3;
}

message FriendMessage {
  uint32 friend_number        = 1;
  MessageType.Type type       = 2;
  uint32 time_delta           = 3;
  string message              = 4;
}

message FileRecvControl {
  uint32 friend_number        = 1;
  uint32 file_number          = 2;
  FileControl.Type control    = 3;
}

message FileChunkRequest {
  uint32 friend_number        = 1;
  uint32 file_number          = 2;
  uint64 position             = 3;
  uint32 length               = 4;
}

message FileRecv {
  uint32 friend_number        = 1;
  uint32 file_number          = 2;
  uint32 kind                 = 3;
  uint64 file_size            = 4;
  string filename             = 5;
}

message FileRecvChunk {
  uint32 friend_number        = 1;
  uint32 file_number          = 2;
  uint64 position             = 3;
  bytes  data                 = 4;
}

message FriendLossyPacket {
  uint32 friend_number        = 1;
  bytes  data                 = 2;
}

message FriendLosslessPacket {
  uint32 friend_number        = 1;
  bytes  data                 = 2;
}


message StartedToxInstance {
  string address             = 1;
  string name                = 2;
  string statusMessage       = 3;
  UserStatus.Type status     = 4;
  int32  nospam              = 5;
}

message SetInfoSuccess {
  string name                = 1;
  string statusMessage       = 2;
  UserStatus.Type status     = 3;
  int32  nospam              = 4;
}


message TimedEvent {
  uint64 timestamp = 1;

  oneof e {
    StartedToxInstance     e_started_tox_instance      =  2;
    SetInfoSuccess         e_set_info_success          =  3;

    SelfConnectionStatus   e_self_connection_status    =  4;
    FriendName             e_friend_name               =  5;
    FriendStatusMessage    e_friend_status_message     =  6;
    FriendStatus           e_friend_status             =  7;
    FriendConnectionStatus e_friend_connection_status  =  8;
    FriendTyping           e_friend_typing             =  9;
    FriendReadReceipt      e_friend_read_receipt       = 10;
    FriendRequest          e_friend_request            = 11;
    FriendMessage          e_friend_message            = 12;
    FileRecvControl        e_file_recv_control         = 13;
    FileChunkRequest       e_file_chunk_request        = 14;
    FileRecv               e_file_recv                 = 15;
    FileRecvChunk          e_file_recv_chunk           = 16;
    FriendLossyPacket      e_friend_lossy_packet       = 17;
    FriendLosslessPacket   e_friend_lossless_packet    = 18;
  }
}


message TimedEventList {
  repeated TimedEvent events = 1;
}
